Additional font-families to fix display issues on Firefox and Chrome.

--- a/css/custom-styles.scss
+++ b/css/custom-styles.scss
@@ -11,15 +11,13 @@ $color-red: #9B1F32;
 $color-yellow: yellow;
 
 /* Mixins */
-
 @mixin all-text {
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;
 }
-
 @mixin sans-serif {
 	@include all-text;
-	font-family: "Menlo", "Monaco" sans-serif;
+	font-family: "Menlo", "Monaco", Consolas, "Courier New", monospace, sans-serif;
 }
 
 /* Typography: */
@@ -27,7 +25,6 @@ h1 {
   @include sans-serif;
   color: $color-grey-80;
   font-weight: 900;
-	//text-transform: uppercase;
 	font-size: 68px;
   line-height: 72px;
 	margin: 24px 0px 0px 0px;
@@ -44,8 +41,6 @@ h2 {
 	line-height: 24px;
 	margin: 24px 0px 24px 0px;
 }
-
-
 p {
 	@include sans-serif;
 	font-size: 16px;
@@ -63,7 +58,6 @@ p {
 		}
 	}
 }
-
 .list-contact-details {
   @include all-text;
   @include sans-serif;
@@ -72,7 +66,6 @@ p {
   padding: 0px;
   list-style-type: none;
 }
-
 li {
   line-height: 48px; // To add space between email, phone and presever vertical rhythm  
   margin: 0px 24px 0px 0px;
@@ -80,7 +73,6 @@ li {
   	display: inline; // On small devices inline doesn't work as the phone number breaks half way
   }
 }
-
 .label-contact {
 	font-weight: 600;
   margin: 0px 16px 0px 0px;
@@ -92,18 +84,15 @@ li {
 }
 
 // Layout
-
 html, body {
   height: 100%;
 }
-
 .vertical-center {
   min-height: 100%;  // Fallback for browsers do NOT support vh unit
   min-height: 100vh; // These two lines are counted as one :-)
   display: flex;
   align-items: center;
 }
-
 @media screen and (max-width: 768px) {
 	.container {
 		margin-left: 16px;
